# barcode

./: CMakeLists.txt  README.md  appgpio.c  appgpio.h  gfx.c  gfx.h  image.h  screen.h  st7735s.c  st7735s.h  st7735s_compat.c  st7735s_compat.h
Application_code/: Test.cpp  barcode.py  t.dts  test.txt  test_2.txt
sshtunnel/: reverse-ssh-tunnel.service  timeli  timeli.pub
